--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,12 +1,26 @@
 <footer class="w-full mt-10 font-inter text-white text-sm text-opacity-70 bg-background text-primary py-4 border-t border-gray-800">
+    <ul class="flex sm:flex space-x-4 font-inter font-semibold text-gray-400 justify-center mt-2 mb-4">
+        <li>
+            <a href="{% url 'privacy_policy' %}">Privacy policy</a>
+        </li>
+        <li>
+            <a href="{% url 'terms_of_service' %}">Terms of Service</a>
+        </li>
+        <li>
+            <a href="{% url 'colophon' %}">FAQs</a>
+        </li>
+        <li>
+            <a href="{% url 'colophon' %}">Colophon</a>
+        </li>
+    </ul>
     <p class="text-center">
-        © <span id="current-year"></span> <a href="{% url 'home' %}" class="text-violet-600 font-semibold">techrahis.com</a>. Powered by <a href="https://www.djangoproject.com/"
+        © <span id="current-year"></span> <a href="{% url 'home' %}" class="text-violet-600 font-semibold">techrahis.com</a>. Crafted with ❤️ by <a href="https://github.com/techrahis"
     target="_blank"
-    class="text-violet-600 font-semibold">Django 5.1</a>.
+    class="text-violet-600 font-semibold">TechRahis</a>.
     </p>
     <p class="text-center mt-2 flex flex-row justify-center text-sky-600 font-bold items-center gap-2">
         <span class="flex items-center gap-2">
-            <i class="fa-solid fa-circle text-[0.4rem] animate-ping-status"></i> All systems normal
+            <i class="fa-solid fa-circle text-[0.4rem] animate-ping-status"></i> 265 visitors in last 7 days
         </span>
         <span class="text-white ml-2 text-opacity-70 flex items-center gap-1">
             <i class="fa-regular fa-clock text-[0.7rem] animate-spin-clock"></i>
