--- a/templates/components/mobile_header_list.html
+++ b/templates/components/mobile_header_list.html
@@ -11,14 +11,11 @@
     <li id="contact-tab">
         <a href="{% url 'contact' %}">Contact</a>
     </li>
-    <li id="projects-tab">
-        <a href="{% url 'others' %}">Others</a>
-    </li>
 </ul>
 <div class="mt-4">
     <a href="{% url 'hire_me' %}">
-        <button class="bg-violet-500 hover:bg-purple-600 border-2 border-white border-opacity-20 shadow-lg text-gray-950 font-bold py-1 px-2 sm:py-2 sm:px-4 rounded font-montserrat">
-            Hire Me
+        <button class="bg-pink-600 hover:bg-pink-500 transition-all duration-300 shadow-lg hover:shadow-xl text-white font-bold py-2 px-4 sm:py-3 sm:px-6 rounded font-montserrat">
+            Get Free 1:1 Consultation
         </button>
     </a>
 </div>
